# CV_Rep

./: .gitignore  README.md  README_AGENTPIPE.md  cert.html  certs.css  index.html  project.html  projects.css  pyproject.toml  script.js  style.css
agentpipe/: __init__.py  agent.py  cli.py  pipeline.py  storage.py  ticket.py  worker.py
agentpipe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
agentpipe/skills/: __init__.py  base.py  code_review.py  code_write.py  file_ops.py  plan.py  search.py  test_write.py
docs/: 01_plan.md  02_plan_review.md  03_plan_improved.md  04_tickets.md  05_tickets_review.md  06_tickets_improved.md  07_execution_log.md  thoughts.md
lab_2_react/: package-lock.json
lab_2_react/src/: App.css  App.jsx
lab_2_react/src/components/: CertPage.jsx  ContactForm.jsx  Education.jsx  Footer.jsx  HardSkills.jsx  Header.jsx  Languages.jsx  Nav.jsx  PersonalInfo.jsx  Projects.jsx  ProjectsPage.jsx  Reviews.jsx  SoftSkills.jsx
tests/: __init__.py  test_cli.py  test_pipeline.py  test_skills.py  test_storage.py  test_ticket.py
